--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "css-loader": "^0.23.1",
+    "html-loader": "^0.4.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "react": "^15.0.1",
