--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "angular": "^1.4.8",
+    "angular-bindonce": "^0.3.1",
+    "angular-messages": "^1.5.5",
     "css-loader": "^0.23.1",
+    "devbridge-autocomplete": "^1.2.24",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.16.1",
+    "jshint": "^2.9.2",
+    "jshint-loader": "^0.8.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "moment": "^2.13.0",
+    "path": "^0.12.7",
     "style-loader": "^0.13.1",
     "tui-core": "1.0.0",
     "tui-datepicker": "1.0.0",
