--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-messages": "^1.5.5",
     "css-loader": "^0.23.1",
     "devbridge-autocomplete": "^1.2.24",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
