--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devbridge-autocomplete": "^1.2.24",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "jquery": "^1.12.3",
