--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "1.x",
     "bootstrap": "^3.3.6",
     "bootstrap-select": "^1.10.0",
-    "bootstrap-datepicker": "^1.6.1"
+    "bootstrap-datepicker": "^1.6.1",
+    "pure": "^0.6.0"
   }
 }
