--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.6",
     "bootstrap-select": "^1.10.0",
     "bootstrap-datepicker": "^1.6.1",
-    "pure": "^0.6.0"
+    "pure": "^0.6.0",
+    "devbridge-autocomplete": "^1.2.24"
   }
 }
