准备将oc迁移进来前备份

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,6 @@
     "pure": "^0.6.0",
     "devbridge-autocomplete": "^1.2.24",
     "bootstrap3-dialog": "bootstrap-dialog#^1.35.1",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
-    "datetimepicker": "^2.5.4"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37"
   }
 }
