--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "pure": "^0.6.0",
     "devbridge-autocomplete": "^1.2.24",
     "bootstrap3-dialog": "bootstrap-dialog#^1.35.1",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.37"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
+    "is-loading": "^1.0.6"
   }
 }
