引入headroom插件的使用

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,8 @@
     "devbridge-autocomplete": "^1.2.24",
     "bootstrap3-dialog": "bootstrap-dialog#^1.35.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.37",
-    "is-loading": "^1.0.6"
+    "is-loading": "^1.0.6",
+    "headroom.js": "https://npmcdn.com/headroom.js/bower.zip",
+    "underscore": "^1.8.3"
   }
 }
