--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.37",
     "is-loading": "^1.0.6",
     "headroom.js": "https://npmcdn.com/headroom.js/bower.zip",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "vue-validator": "^2.1.3",
+    "vue": "^1.0.25"
   }
 }
