--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "headroom.js": "https://npmcdn.com/headroom.js/bower.zip",
     "underscore": "^1.8.3",
     "vue-validator": "^2.1.3",
-    "vue": "^1.0.25"
+    "vue": "^1.0.25",
+    "vue-resource": "^0.9.1"
   }
 }
