--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "underscore": "^1.8.3",
     "vue-validator": "^2.1.3",
     "vue": "^1.0.25",
-    "vue-resource": "^0.9.1"
+    "vue-resource": "^0.9.1",
+    "select2": "^4.0.3",
+    "selectize": "^0.12.1"
   }
 }
