--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "vue": "^1.0.25",
     "vue-resource": "^0.9.1",
     "select2": "^4.0.3",
-    "selectize": "^0.12.1"
+    "selectize": "^0.12.1",
+    "nprogress": "^0.2.0"
   }
 }
