--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
+    "highlight.js": "^9.6.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "jquery": "^1.12.3",
