--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jshint-loader": "^0.8.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "lodash": "^4.16.1",
     "marked": "^0.3.6",
     "moment": "^2.13.0",
     "path": "^0.12.7",
